--- a/.gitignore
+++ b/.gitignore
@@ -31,16 +31,9 @@ mercury/
 viking/
 
 # Generated outputs (verification results; tracked selectively)
-output/**
-!output/**/
-!output/summary/part3_audit_summary.json
-!output/summary/part3_completion_inventory.json
-!output/quantum/**/*.json
-!output/quantum/**/*.csv
-!output/quantum/**/*.png
-!output/cosmology/*.json
-!output/cosmology/*.csv
-!output/cosmology/*.png
+# - Tracked artifacts under output/ remain tracked.
+# - New outputs are ignored by default to keep the repo minimal.
+output/
 
 # Input data caches (not tracked here)
 data/
